--- a/NewsApp/app/build.gradle
+++ b/NewsApp/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
     testCompile 'junit:junit:4.12'
 }
