--- a/NewsApp/app/src/main/AndroidManifest.xml
+++ b/NewsApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="edu.sjsu.newsapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,11 +18,19 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <action android:name="android.intent.action.SEARCH" />
+                <action android:name="android.intent.action.SEARCH"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                       android:resource="@xml/searchable" />
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
+        <activity
+            android:name=".NewsArticle"
+            android:label="@string/title_activity_news_article"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
