--- a/NewsApp/app/src/main/AndroidManifest.xml
+++ b/NewsApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="edu.sjsu.newsapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -30,7 +31,12 @@
         <activity
             android:name=".NewsArticle"
             android:label="@string/title_activity_news_article"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".HomeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
         </activity>
     </application>
 
